Image preprocessing add

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -160,7 +160,16 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/vgg13-c768596a.pth\" to /root/.torch/models/vgg13-c768596a.pth\n",
+      "100%|██████████| 532194478/532194478 [00:05<00:00, 101344773.74it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Use GPU if it's available\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -235,7 +244,7 @@
        ")"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -257,26 +266,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1.. Train loss: 4.559.. Test loss: 4.273.. Test accuracy: 0.125\n",
-      "Epoch 1/1.. Train loss: 4.236.. Test loss: 3.988.. Test accuracy: 0.176\n",
-      "Epoch 1/1.. Train loss: 4.063.. Test loss: 3.498.. Test accuracy: 0.307\n",
-      "Epoch 1/1.. Train loss: 3.568.. Test loss: 3.117.. Test accuracy: 0.362\n",
-      "Epoch 1/1.. Train loss: 3.372.. Test loss: 2.779.. Test accuracy: 0.447\n",
-      "Epoch 1/1.. Train loss: 3.052.. Test loss: 2.516.. Test accuracy: 0.464\n",
-      "Epoch 1/1.. Train loss: 2.877.. Test loss: 2.283.. Test accuracy: 0.491\n",
-      "Epoch 1/1.. Train loss: 2.671.. Test loss: 1.959.. Test accuracy: 0.594\n",
-      "Epoch 1/1.. Train loss: 2.302.. Test loss: 1.795.. Test accuracy: 0.592\n",
-      "Epoch 1/1.. Train loss: 2.420.. Test loss: 1.609.. Test accuracy: 0.631\n",
-      "Epoch 1/1.. Train loss: 2.237.. Test loss: 1.461.. Test accuracy: 0.666\n",
-      "Epoch 1/1.. Train loss: 1.950.. Test loss: 1.345.. Test accuracy: 0.686\n",
-      "Epoch 1/1.. Train loss: 2.068.. Test loss: 1.218.. Test accuracy: 0.713\n",
-      "Epoch 1/1.. Train loss: 1.778.. Test loss: 1.132.. Test accuracy: 0.739\n",
-      "Epoch 1/1.. Train loss: 1.877.. Test loss: 1.083.. Test accuracy: 0.741\n",
-      "Epoch 1/1.. Train loss: 1.664.. Test loss: 0.962.. Test accuracy: 0.786\n",
-      "Epoch 1/1.. Train loss: 1.778.. Test loss: 0.896.. Test accuracy: 0.791\n",
-      "Epoch 1/1.. Train loss: 1.679.. Test loss: 0.858.. Test accuracy: 0.793\n",
-      "Epoch 1/1.. Train loss: 1.529.. Test loss: 0.841.. Test accuracy: 0.796\n",
-      "Epoch 1/1.. Train loss: 1.587.. Test loss: 0.847.. Test accuracy: 0.791\n"
+      "Epoch 1/1.. Train loss: 4.533.. Test loss: 4.276.. Test accuracy: 0.099\n",
+      "Epoch 1/1.. Train loss: 4.302.. Test loss: 3.764.. Test accuracy: 0.193\n",
+      "Epoch 1/1.. Train loss: 3.945.. Test loss: 3.333.. Test accuracy: 0.361\n",
+      "Epoch 1/1.. Train loss: 3.581.. Test loss: 3.041.. Test accuracy: 0.333\n",
+      "Epoch 1/1.. Train loss: 3.533.. Test loss: 2.711.. Test accuracy: 0.429\n",
+      "Epoch 1/1.. Train loss: 3.123.. Test loss: 2.411.. Test accuracy: 0.485\n",
+      "Epoch 1/1.. Train loss: 2.929.. Test loss: 2.185.. Test accuracy: 0.514\n",
+      "Epoch 1/1.. Train loss: 2.531.. Test loss: 1.938.. Test accuracy: 0.569\n",
+      "Epoch 1/1.. Train loss: 2.413.. Test loss: 1.730.. Test accuracy: 0.616\n",
+      "Epoch 1/1.. Train loss: 2.200.. Test loss: 1.584.. Test accuracy: 0.653\n",
+      "Epoch 1/1.. Train loss: 2.211.. Test loss: 1.436.. Test accuracy: 0.679\n",
+      "Epoch 1/1.. Train loss: 2.229.. Test loss: 1.329.. Test accuracy: 0.688\n",
+      "Epoch 1/1.. Train loss: 1.908.. Test loss: 1.210.. Test accuracy: 0.715\n",
+      "Epoch 1/1.. Train loss: 1.858.. Test loss: 1.150.. Test accuracy: 0.733\n",
+      "Epoch 1/1.. Train loss: 1.812.. Test loss: 1.083.. Test accuracy: 0.751\n",
+      "Epoch 1/1.. Train loss: 1.693.. Test loss: 1.032.. Test accuracy: 0.746\n",
+      "Epoch 1/1.. Train loss: 1.698.. Test loss: 0.986.. Test accuracy: 0.753\n",
+      "Epoch 1/1.. Train loss: 1.667.. Test loss: 0.915.. Test accuracy: 0.760\n",
+      "Epoch 1/1.. Train loss: 1.470.. Test loss: 0.880.. Test accuracy: 0.779\n",
+      "Epoch 1/1.. Train loss: 1.607.. Test loss: 0.827.. Test accuracy: 0.797\n"
      ]
     }
    ],
@@ -337,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.879.. Test accuracy: 0.791\n"
+      "Test loss: 0.818.. Test accuracy: 0.800\n"
      ]
     }
    ],
@@ -384,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,28 +417,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Error(s) in loading state_dict for VGG:\n\tMissing key(s) in state_dict: \"features.14.weight\", \"features.14.bias\", \"features.19.weight\", \"features.19.bias\", \"features.21.weight\", \"features.21.bias\", \"features.24.weight\", \"features.24.bias\", \"features.26.weight\", \"features.26.bias\", \"features.28.weight\", \"features.28.bias\". \n\tUnexpected key(s) in state_dict: \"features.15.weight\", \"features.15.bias\", \"features.20.weight\", \"features.20.bias\", \"features.22.weight\", \"features.22.bias\". \n\tWhile copying the parameter named \"features.17.weight\", whose dimensions in the model are torch.Size([512, 256, 3, 3]) and whose dimensions in the checkpoint are torch.Size([512, 512, 3, 3]).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-ee15716b7b4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_checkpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'checkpoint.pth'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-27-ee15716b7b4d>\u001b[0m in \u001b[0;36mload_checkpoint\u001b[0;34m(filepath)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheckpoint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'classifier'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclass_to_idx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheckpoint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'class_to_idx'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheckpoint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'state_dict'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheckpoint\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'learning_rate'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36mload_state_dict\u001b[0;34m(self, state_dict, strict)\u001b[0m\n\u001b[1;32m    719\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_msgs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    720\u001b[0m             raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n\u001b[0;32m--> 721\u001b[0;31m                                self.__class__.__name__, \"\\n\\t\".join(error_msgs)))\n\u001b[0m\u001b[1;32m    722\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    723\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for VGG:\n\tMissing key(s) in state_dict: \"features.14.weight\", \"features.14.bias\", \"features.19.weight\", \"features.19.bias\", \"features.21.weight\", \"features.21.bias\", \"features.24.weight\", \"features.24.bias\", \"features.26.weight\", \"features.26.bias\", \"features.28.weight\", \"features.28.bias\". \n\tUnexpected key(s) in state_dict: \"features.15.weight\", \"features.15.bias\", \"features.20.weight\", \"features.20.bias\", \"features.22.weight\", \"features.22.bias\". \n\tWhile copying the parameter named \"features.17.weight\", whose dimensions in the model are torch.Size([512, 256, 3, 3]) and whose dimensions in the checkpoint are torch.Size([512, 512, 3, 3])."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
     "def load_checkpoint(filepath):\n",
     "    checkpoint = torch.load(filepath)\n",
-    "    model = models.vgg16(pretrained=True)\n",
+    "    model = models.vgg13(pretrained=True)\n",
     "    for param in model.parameters():\n",
     "        param.requires_grad = False\n",
     "    model.classifier = checkpoint['classifier']\n",
@@ -476,16 +471,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import PIL\n",
+    "from PIL import Image\n",
+    "\n",
     "def process_image(image):\n",
     "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
     "        returns an Numpy array\n",
     "    '''\n",
+    "    # TODO: Process a PIL image for use in a PyTorch model\n",
+    "    pil_image = PIL.Image.open(image)\n",
+    "    pil_image = transforms.Compose([transforms.Resize(256),\n",
+    "                                    transforms.CenterCrop(224),\n",
+    "                                   transforms.Normalize([0.485, 0.456, 0.406],\n",
+    "                                                       [0.229, 0.224, 0.225])])\n",
     "    \n",
-    "    # TODO: Process a PIL image for use in a PyTorch model"
+    "    np_image = np.array(pil_image)\n",
+    "    return np_image"
    ]
   },
   {
@@ -497,9 +503,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'image' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-c3692403bbae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocess_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'blanket flower'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'image' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def imshow(image, ax=None, title=None):\n",
     "    \"\"\"Imshow for Tensor.\"\"\"\n",
@@ -520,7 +538,9 @@
     "    \n",
     "    ax.imshow(image)\n",
     "    \n",
-    "    return ax"
+    "    return ax\n",
+    "\n",
+    "plt.show(imshow(process_image(image),None,'blanket flower'))"
    ]
   },
   {
@@ -546,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,12 +592,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-21-15ca2e3f21b6>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-15ca2e3f21b6>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    image.title(cat_to_name[])\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Display an image along with the top 5 classes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
