--- a/Image Classifier Project Final.ipynb
+++ b/Image Classifier Project Final.ipynb
@@ -325,8 +325,15 @@
     "                  'learning_rate': learning_rate,\n",
     "                  'class_to_idx': train_data.class_to_idx,\n",
     "                  'optimizer_dict': optimizer.state_dict()}\n",
-    "    torch.save(checkpoint, path)\n",
-    "    \n",
+    "    torch.save(checkpoint, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "save_checkpoint(model=model)"
    ]
   },
@@ -356,8 +363,15 @@
     "    model.classifier = checkpoint['classifier']\n",
     "    model.class_to_idx = checkpoint['class_to_idx']\n",
     "    model.load_state_dict(checkpoint['state_dict'])\n",
-    "    return optimizer,criterion, model\n",
-    "\n",
+    "    return optimizer,criterion, model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "optimizer,criterion, model = load_checkpoint('checkpoint.pth')"
    ]
   },
